# ecommerce

./: .gitignore  pyproject.toml
app/: database.py  main.py  schemas.py
app/models/: categories.py  create_tables.py  products.py  query_to_db.py
app/routers/: categories.py  products.py
